# axidex

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  sentry.client.config.ts
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: PULSE_Proposal_Glluztech (1).html
public/: robots.txt
src/: middleware.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
src/components/: keyboard-shortcuts-modal.tsx  keyboard-shortcuts-provider.tsx
src/hooks/: use-accounts.ts  use-emails.ts  use-keyboard-shortcuts.ts  use-onboarding.ts  use-realtime-signals.ts  use-rules.ts  use-signals.ts  (+1 more)
worker/: .env.example  Dockerfile  pyproject.toml  railway.toml
worker/src/: __init__.py  config.py  health.py  main.py  models.py  sentry_setup.py
worker/src/ai/: __init__.py  classify.py  extract.py
worker/src/db/: dedup.py  supabase.py
worker/src/scrapers/: base.py  company.py  globenewswire.py  googlenews.py  hackernews.py  jobs.py  linkedin.py  linkedin_profiles.py  news.py  prnewswire.py  producthunt.py  reddit.py  techblogs.py
worker/tests/: test_dedup.py  test_linkedin.py
(+211 files in other folders)
