[project]
name = "axidex-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "supabase>=2.0",
    "schedule>=1.2",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "openai>=1.0",
    "brightdata-sdk>=1.0",
    "tenacity>=8.0",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
